# ChangeLog for xfce-base/thunar
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/thunar/ChangeLog,v 1.19 2007/02/12 19:14:05 drac Exp $

*thunar-0.8.0-r2 (12 Feb 2007)

  12 Feb 2007; Samuli Suominen <drac@gentoo.org>
  +files/thunar-0.8.0-jpeg.patch, +thunar-0.8.0-r2.ebuild:
  Fix unaligned memory access in exif code -patch from upstream bugzilla, bug
  2880.

*thunar-0.8.0-r1 (04 Feb 2007)

  04 Feb 2007; Samuli Suominen <drac@gentoo.org> +thunar-0.8.0-r1.ebuild:
  Move checks to local scope and adjust dbus dep.

  03 Feb 2007; Joshua Nichols <nichoj@gentoo.org>
  -thunar-0.5.0_rc2-r3.ebuild:
  Removing old version.

  31 Jan 2007; Peter Weller <welp@gentoo.org> thunar-0.8.0.ebuild:
  Cleanup

  29 Jan 2007; Peter Weller <welp@gentoo.org> thunar-0.8.0.ebuild:
  A number of fixes

  28 Jan 2007; Peter Weller <welp@gentoo.org> thunar-0.8.0.ebuild:
  Dep fixes, various other fixes

  23 Jan 2007; Peter Weller <welp@gentoo.org> thunar-0.8.0.ebuild:
  Removing usage of virtual/x11,  and hardcoding in depends. Minor clean ups.

*thunar-0.8.0 (22 Jan 2007)

  22 Jan 2007; Joshua Nichols <nichoj@gentoo.org> +thunar-0.8.0.ebuild:
  Version bump.

  06 Jan 2007; Joshua Nichols <nichoj@gentoo.org> -thunar-0.5.0_rc2.ebuild,
  -thunar-0.5.0_rc2-r1.ebuild, -thunar-0.5.0_rc2-r2.ebuild,
  thunar-0.5.0_rc2-r3.ebuild:
  Added IUSE=debug, which was dropped when 'inherit debug' was removed from
  xfce44.eclass. Pruned old revisions.

  06 Jan 2007; Joshua Nichols <nichoj@gentoo.org>
  thunar-0.5.0_rc2-r3.ebuild:
  Added IUSE=debug, which was dropped when 'inherit debug' was removed from
  xfce44.eclass.

*thunar-0.5.0_rc2-r3 (28 Dec 2006)

  28 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  +thunar-0.5.0_rc2-r3.ebuild:
  Added use flag for toggling trash panel plugin (bug #158320).

*thunar-0.5.0_rc2-r2 (19 Dec 2006)

  19 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  +thunar-0.5.0_rc2-r2.ebuild: