@@ -7,14 +7,14 @@ EBUILD thunar-0.8.0-r1.ebuild 2010 RMD160 856e9453d5edc2152adb84a85d84319411be62
 MD5 fe7b407871ea9691ad024f36d51b5f9f thunar-0.8.0-r1.ebuild 2010
 RMD160 856e9453d5edc2152adb84a85d84319411be6258 thunar-0.8.0-r1.ebuild 2010
 SHA256 00515fa7e81157cf6b844ba7ddb1386662be60bc5fa0fdd288f6dd4e601a1733 thunar-0.8.0-r1.ebuild 2010
-EBUILD thunar-0.8.0-r2.ebuild 2089 RMD160 7af60058646c2aaf72b47a09a8e11db1a48ffd22 SHA1 ea29eb3e1aff95f12f2575f70cf174ffce737413 SHA256 3400fd0b087d82c0f2c7eb91eb449ad179d22cf817d43caf5ede1c339b949f90
-MD5 fe41c74750c3b18a00e329e455cd3eb6 thunar-0.8.0-r2.ebuild 2089
-RMD160 7af60058646c2aaf72b47a09a8e11db1a48ffd22 thunar-0.8.0-r2.ebuild 2089
-SHA256 3400fd0b087d82c0f2c7eb91eb449ad179d22cf817d43caf5ede1c339b949f90 thunar-0.8.0-r2.ebuild 2089
-MISC ChangeLog 3411 RMD160 b0b32f75acf924cbf23d64717cb1ad32ff647170 SHA1 e10f493a9712e77feb78aa6f8bc6c0d6cd330eaf SHA256 9b8d5ffcf9e20e98311d2ddb15a314eea9920e9d5ecc13fa7cbd1c413542f52e
-MD5 2e6537810230a7531a639acbade977a6 ChangeLog 3411
-RMD160 b0b32f75acf924cbf23d64717cb1ad32ff647170 ChangeLog 3411
-SHA256 9b8d5ffcf9e20e98311d2ddb15a314eea9920e9d5ecc13fa7cbd1c413542f52e ChangeLog 3411
+EBUILD thunar-0.8.0-r2.ebuild 2153 RMD160 3ed85593f6afb06fd21be739ce4e421b440d9c53 SHA1 b02c87380cd2e53d67528790cd092cdc9f2c2ef7 SHA256 220ee74e6cc5367543985a10977091e9b14abe415e284ebf0dcb874fbe899e2b
+MD5 55d868f0b86fcf5341240e3c125fb1e9 thunar-0.8.0-r2.ebuild 2153
+RMD160 3ed85593f6afb06fd21be739ce4e421b440d9c53 thunar-0.8.0-r2.ebuild 2153
+SHA256 220ee74e6cc5367543985a10977091e9b14abe415e284ebf0dcb874fbe899e2b thunar-0.8.0-r2.ebuild 2153
+MISC ChangeLog 3567 RMD160 7aa8cc2a8f3b6fa1e11deb0ec68a9bfd1c4f237d SHA1 1110d791f5c4d330a0969e5d21a76734b408b771 SHA256 7a0dd8b69ebf0a70b4cdd1a02cb7d79d36b56c873e593e2f9761630440c97756
+MD5 b9be9571a547786f686a3563cc69b958 ChangeLog 3567
+RMD160 7aa8cc2a8f3b6fa1e11deb0ec68a9bfd1c4f237d ChangeLog 3567
+SHA256 7a0dd8b69ebf0a70b4cdd1a02cb7d79d36b56c873e593e2f9761630440c97756 ChangeLog 3567
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 MD5 c390804e060ffd11a5bbb143434b2b2d metadata.xml 157
 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 metadata.xml 157
